bug fix and changes

--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/customer-details/customer-details-list/customer-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/customer-details/customer-details-list/customer-details-list.component.html
@@ -112,7 +112,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="panCardNumber">
-                    <mat-header-cell *matHeaderCellDef>Customer Pan Card No.</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Customer PAN Card No.</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element?.panCardNumber ? element?.panCardNumber : '-'}}
                     </mat-cell>
