--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
@@ -2,9 +2,9 @@
     <kt-portlet-body [class]="'kt-portlet__body--fit d-flex align-items-center justify-content-center'">
         <div class="row row-no-padding row-col-separator-xl">
             <div class="col-12 text-center">
-                <h5 class="text-dark">To upload on worksheet click here on attach Excel File.</h5>
+                <h5 class="text-dark">To upload on worksheet click on the Attach Excel File button</h5>
                 <p class="pt-3"><span class="font-weight-bold kt-pointer" (click)="getProductReport()">Click Here</span>
-                    To Download All Products</p>
+                    to download All Products</p>
 
                 <a *ngIf="!editUpload" href="assets/media/files/products.csv" download="products.csv">Click to download
                     sample file</a>
