--- a/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/view-pay/view-pay.component.html
@@ -7,22 +7,22 @@
                 <table class="table table-borderless">
                     <tbody>
                         <tr>
-                            <td>Name</td>
+                            <td>Name :</td>
                             <td class="font-weight-500">
                                 {{orderData.customerDetails.firstName}}&nbsp;{{orderData.customerDetails.lastName}}</td>
-                            <td>Order ID</td>
+                            <td>Order ID :</td>
                             <td class="font-weight-500">{{orderData.orderUniqueId}}</td>
                         </tr>
                         <tr>
-                            <td>Mobile</td>
+                            <td>Mobile :</td>
                             <td class="font-weight-500">{{orderData.customerDetails.mobileNumber}}</td>
-                            <td>Product Name</td>
+                            <td>Product Name :</td>
                             <td class="font-weight-500">{{orderData.product.productName}}</td>
                         </tr>
                         <tr>
-                            <td>SKU</td>
+                            <td>SKU :</td>
                             <td class="font-weight-500">{{orderData.product.sku}}</td>
-                            <td>Weight</td>
+                            <td>Weight :</td>
                             <td class="font-weight-500">{{orderData.weight}}&nbsp;Grams</td>
                         </tr>
                     </tbody>
@@ -60,7 +60,7 @@
                         <thead>
                             <tr class="text-color">
                                 <th></th>
-                                <th scope="col">Member ID</th>
+                                <th scope="col">Customer ID</th>
                                 <th scope="col">Order ID</th>
                                 <th scope="col">EMI Date</th>
                                 <th scope="col">EMI Amount</th>
