--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -86,7 +86,7 @@
                         {{element?.order?.product?.productName ? element?.order?.product?.productName : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="productWeight">
-                    <mat-header-cell *matHeaderCellDef class="align-right">Product Weight(in gm)</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef class="align-right">Product Weight (gms)</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
                         {{element?.order?.weight ? element?.order?.weight : '-'}}</mat-cell>
                 </ng-container>
