--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-5 align-self-center">
-                            <label class="font-weight-500 text-color">User Id</label>
+                            <label class="font-weight-500 text-color">Customer Id</label>
                         </div>
                         <div class="col-7">
                             <input type="text" formControlName="userId" class="form-control" disabled>
@@ -139,7 +139,7 @@
                             </mat-error>
                             <mat-error
                                 *ngIf="controls.customerAccountNo.errors?.minlength && controls.customerAccountNo.touched">
-                                Maximum 8 digits Only
+                                Minimum 8 digits Only
                             </mat-error>
                             <mat-error
                                 *ngIf="controls.customerAccountNo.errors?.maxlength && controls.customerAccountNo.touched">
