--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -70,7 +70,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="memberId">
-                    <mat-header-cell *matHeaderCellDef>Member ID</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element['customerDetails.customerUniqueId'] ? element['customerDetails.customerUniqueId'] : '-'}}
                     </mat-cell>
