--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">User Id</label>
+                            <label class="font-weight-500 text-color">Customer Id</label>
                         </div>
                         <div class="col-8">
                             <input type="text" formControlName="userId" class="form-control" disabled>
