--- a/gold-admin-frontend/src/app/views/pages/broker/orders/cancel-order/cancel-order.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/cancel-order/cancel-order.component.html
@@ -141,7 +141,7 @@
                             </mat-error>
                             <mat-error
                                 *ngIf="controls.customerAccountNo.errors?.minlength && controls.customerAccountNo.touched">
-                                Maximum 8 digits Only
+                                Minimum 8 digits Only
                             </mat-error>
                             <mat-error
                                 *ngIf="controls.customerAccountNo.errors?.maxlength && controls.customerAccountNo.touched">
@@ -204,9 +204,9 @@
                                 <input type="text" class="form-control" style="width: 50%;" formControlName="otp"
                                     numbersOnly>&nbsp;&nbsp;
                                 <kt-button [value]="value" [type]="'button'" (click)="confirmOtp()"></kt-button>
+                                <mat-error *ngIf="controls.otp.touched && controls.otp.errors?.required">
+                                    OTP is required</mat-error>
                             </div>
-                            <mat-error *ngIf="controls.otp.touched && controls.otp.errors?.required">
-                                OTP is required</mat-error>
                         </div>
                     </div>
                 </form>
