--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -106,6 +106,11 @@ body {
 	cursor: not-allowed !important;
 }
 
+button[type="button"]:disabled{
+	cursor: not-allowed !important;
+
+}
+
 .isError {
 	border: 1px solid #ff7272 !important;
 	border-radius: 9px !important;
