--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -60,13 +60,21 @@
             </div>
             <div class="row kt-margin-t-15">
                 <div class="col-6">
-                    <div class="row">
+                    <div class="row" *ngIf="controls.panType.value=='pan'">
                         <div class="col-4 form-label">
                             <label class="text-color kt-padding-l-10">PAN Number</label>
                         </div>
                         <div class="col-6">
                             <input type="text" class="form-control" placeholder="qwert1234q"
                                 formControlName="panCardNumber" readonly>
+                        </div>
+                    </div>
+                    <div class="row" *ngIf="controls.panType.value=='form60'">
+                        <div class="col-4 form-label">
+                            <label class="text-color kt-padding-l-10">Form 60</label>
+                        </div>
+                        <div class="col-6">
+                            <img [src]="controls.panImage.value" height="80" width="40" alt="">
                         </div>
                     </div>
                 </div>
