--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -32,9 +32,9 @@
                                 </div>
                                 <div class="col offset-4">
                                     <div class="row pb-2">
-                                        <div class="col-6" *ngIf="schemeDeatils.schemeType == 'unsecured'">
-                                            <mat-slide-toggle
-                                                (change)="changeDefault($event.checked, idx, schemeDeatils)">
+                                        <div class="col">
+                                            <mat-slide-toggle  *ngIf="schemeDeatils.schemeType == 'unsecured'" [disabled]="schemeDeatils.default"
+                                                (change)="changeDefault($event.checked, idx, schemeDeatils,i)" [checked]="schemeDeatils.default">
                                                 <strong>Default</strong>
                                             </mat-slide-toggle>
                                         </div>
