--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
@@ -12,7 +12,7 @@
                             <th scope="col">Order ID</th>
                             <th scope="col">Status</th>
                             <th scope="col">Logistic Name</th>
-                            <th scope="col">Tracking No</th>
+                            <th scope="col">Tracking ID</th>
                             <th scope="col">AWB File</th>
                             <th scope="col">AWB Box</th>
                             <th scope="col">Created At</th>
