--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -248,7 +248,7 @@
                 <div class="col-12 kt-margin-bottom-20-mobile">
                   <div class="row pb-3">
                     <div class="col-6">
-                      <label>By Payment Recieved Date</label>
+                      <label>By Payment Received Date</label>
                       <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
                         (click)="pickerStartDate.open()" formControlName="startDate">
                       <mat-datepicker #pickerStartDate></mat-datepicker>
