--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
@@ -204,7 +204,7 @@
         <div class="row py-2">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-3 text-muted">Check Copy :</div>
+                    <div class="col-3 text-muted">Cheque Copy :</div>
                     <div class="col image-text-truncate" *ngIf="refundData?.checkCopy?.originalname">
                         {{refundData?.checkCopy?.originalname}}&nbsp;&nbsp;<a href="{{refundData?.checkCopy?.url}}"
                             target="_blank" download="{{refundData?.passbookCopy?.originalname}}"><img
