--- a/gold-admin-frontend/src/app/views/pages/broker/orders/cancel-order/cancel-order.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/orders/cancel-order/cancel-order.component.html
@@ -182,7 +182,7 @@
                         </div>
 
                         <div class="col-2 align-self-center">
-                            <label class="font-weight-500 text-color">Check Copy</label>
+                            <label class="font-weight-500 text-color">Cheque Copy</label>
                         </div>
                         <div class="col-4">
                             <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'checkCopy'"
@@ -194,7 +194,7 @@
                             <div *ngIf="controls.checkCopyId.touched && controls.checkCopyId.invalid">
                                 <mat-error
                                     *ngIf="controls.checkCopyId.touched && controls.checkCopyId.errors?.required">
-                                    Check Copy is required</mat-error>
+                                    Cheque Copy is required</mat-error>
                             </div>
                         </div>
                         <div class="mx-auto">
