--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-cancel-dialog/order-cancel-dialog.component.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-5 align-self-center">
-                            <label class="font-weight-500 text-color">Check Copy</label>
+                            <label class="font-weight-500 text-color">Cheque Copy</label>
                         </div>
                         <div class="col-7">
                             <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'checkCopy'"
@@ -193,7 +193,7 @@
                             <div *ngIf="controls.checkCopyId.touched && controls.checkCopyId.invalid">
                                 <mat-error
                                     *ngIf="controls.checkCopyId.touched && controls.checkCopyId.errors?.required">
-                                    Check Copy is required</mat-error>
+                                    Cheque Copy is required</mat-error>
                             </div>
                         </div>
                     </div>
