--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="row kt-margin-t-15" *ngIf="showUploadFile">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Check Copy</label>
+                            <label class="font-weight-500 text-color">Cheque Copy</label>
                         </div>
                         <div class="col-8">
                             <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'checkCopy'"
@@ -191,7 +191,7 @@
                     </div>
                     <div class="row kt-margin-t-15" *ngIf="showUploadedFile">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Check Copy</label>
+                            <label class="font-weight-500 text-color">Cheque Copy</label>
                         </div>
                         <div class="col-8">
                             <a class="text-body" [href]="refundData.passbookCopy.url"
