--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
@@ -67,7 +67,7 @@
                 </div>
             </div> -->
             <div class="row py-3">
-                <div class="col-6 pr-4">
+                <div class="col-6" [ngClass]="showNumberSearchFlag ? 'pr-4' : 'pl-4'">
                     <div class="row">
                         <div class="col-4 align-self-center">
                             <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Customer
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 pl-4">
+                <div class="col-6" [ngClass]="!showNumberSearchFlag ? 'pr-4 order-first' : 'pl-4'">
                     <div class="row">
                         <div class="col-4 align-self-center">
                             <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Mobile
@@ -223,6 +223,66 @@
                             <mat-error *ngIf=" controls.postalCode.errors?.required && controls.postalCode.touched">
                                 Field is required
                             </mat-error>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row py-3">
+                <div class="col-6 pr-4">
+                    <div class="row">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">PAN Card
+                                Number</label>
+                        </div>
+                        <div class="col-8">
+                            <input type="text" aria-label="PAN Card Number" placeholder="PAN Card Number"
+                                class="form-control" formControlName="panCardNumber"
+                                [class.isError]="controls.panCardNumber.touched && controls.panCardNumber.invalid">
+                            <mat-error
+                                *ngIf=" controls.panCardNumber.errors?.required && controls.panCardNumber.touched">
+                                Field is required
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 pl-4">
+                    <div class="row">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">PAN Card
+                                Name</label>
+                        </div>
+                        <div class="col-8">
+                            <input type="text" aria-label="PAN Card Name" placeholder="PAN Card Name"
+                                class="form-control" formControlName="nameOnPanCard"
+                                [class.isError]="controls.nameOnPanCard.touched && controls.nameOnPanCard.invalid">
+                            <mat-error
+                                *ngIf=" controls.nameOnPanCard.errors?.required && controls.nameOnPanCard.touched">
+                                Field is required
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row py-3">
+                <div class="col-6 pr-4">
+                    <div class="row">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Upload Pan
+                                Card</label>
+                        </div>
+                        <div class="col-8">
+                            <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'panCardFileId'"
+                                [fileAcceptType]="'image/*'" [action]="'remove'" (upload)="uploadImage($event)"
+                                (remove)="removeImage($event)">
+                            </kt-uplod-preview-image>
+                            <input type="text" formControlName="panCardFileId" class="form-control"
+                                [class.isError]="controls.panCardFileId.touched && controls.panCardFileId.invalid"
+                                hidden>
+                            <div *ngIf="controls.panCardFileId.touched && controls.panCardFileId.invalid">
+                                <mat-error
+                                    *ngIf="controls.panCardFileId.touched && controls.panCardFileId.errors?.required">
+                                    Field is required</mat-error>
+                            </div>
                         </div>
                     </div>
                 </div>
